# Data-Literacy-with-Python-MNXB08

./: README.md  main.py  pyproject.toml
Assignment/: Assignment_MNXB07_2025.ipynb
Practical_1/: practical1.ipynb
Practical_2/: practical2.ipynb  prep.ipynb
Practical_3/: Practical3.ipynb  prep.ipynb
