[project]
name = "data-literacy-with-python-mnxb08"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gapminder>=0.1",
    "great-tables>=0.20.0",
    "plotnine>=0.15.1",
    "polars>=1.35.1",
    "pyarrow>=22.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "jupyterlab-quarto>=0.3.5",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "pyyaml>=6.0.3",
    "setuptools>=80.9.0",
]
